Fix alignment of input and button styling

--- a/src/components/inputField/inputField.module.scss
+++ b/src/components/inputField/inputField.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	max-width: 400px;
+	// max-width: 400px;
 	margin: 0 auto;
 	gap: 0.5rem;
 
